--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -1,24 +1,24 @@
-<div class="{{cssClass}}" autocomplete="off">
+<div class="{{cssClass}} base-form" autocomplete="off">
     <p>This script is for creating a custom damage message and applying the damage to your targeted token.</p>
-    <div class="form-group">
-      <label for="label">Label:</label>
-      <input autofocus placeholder="Label" name="label" value="{{lookup storedData (lookup storageKeys 0)}}">
+    <div class="base-form__group">
+      <label class="base-form__label" for="label">Label:</label>
+      <input class="base-form__text-input" autofocus placeholder="Label" name="label" value="{{lookup storedData (lookup storageKeys 0)}}">
     </div>
-    <div class="form-group">
-      <label for="description">Description:</label>
-      <input placeholder="Description" name="description" value="{{lookup storedData (lookup storageKeys 1)}}">
+    <div class="base-form__group">
+      <label class="base-form__label" for="description">Description:</label>
+      <input class="base-form__text-input" placeholder="Description" name="description" value="{{lookup storedData (lookup storageKeys 1)}}">
     </div>
-    <div class="form-group">
-      <label for="formula">Formula:</label>
-      <input placeholder="xdy + z" name="formula" value="{{lookup storedData (lookup storageKeys 2)}}">
+    <div class="base-form__group">
+      <label class="base-form__label" for="formula">Formula:</label>
+      <input class="base-form__text-input" placeholder="xdy + z" name="formula" value="{{lookup storedData (lookup storageKeys 2)}}">
     </div>
-    <div class="form-group">
-      <label for="isHeal">Is Heal:</label>
-      <input type="checkbox" name="isHeal" {{checked heal}}>
+    <div class="base-form__group base-form__group--checkbox">
+      <label class="base-form__label" for="isHeal">Is Heal:</label>
+      <input class="base-form__checkbox" type="checkbox" name="isHeal" {{checked heal}}>
     </div>
-    <div class="form-group">
-      <button type="submit">Damage</button>
-      <button type="button" data-action="store">Store</button>
-      <button type="button" data-action="close">Close</button>
+    <div class="base-form__group base-form__group--right">
+      <button type="submit" class="base-form__button base-form__button--primary">Damage</button>
+      <button type="button" class="base-form__button" data-action="store">Store</button>
+      <button type="button" class="base-form__button" data-action="close">Close</button>
     </div>
 </div>
