--- a/src/scss/global/_checkbox-overrides.scss
+++ b/src/scss/global/_checkbox-overrides.scss
@@ -1,48 +1,58 @@
 @use "../utils/colors";
 
-input[type="checkbox"].base-form__checkbox {
-  all: initial !important;
-  display: inline-block !important;
-  width: 28px !important;
-  height: 28px !important;
-  background-color: colors.$checkbox-bg !important;
-  border: none !important;
-  margin: 0 10px !important;
-  cursor: pointer !important;
-  vertical-align: middle !important;
-  position: relative !important;
-  z-index: 100 !important;
-  border-radius: 4px !important;
-  box-shadow: 
-    0 0 0 1px rgba(0, 0, 0, 0.8),
-    inset 0 1px 3px rgba(0, 0, 0, 0.6) !important;
+/* Target only checkboxes within our base-form */
+.eventide-rp-system .base-form input[type="checkbox"].base-form__checkbox {
+    -webkit-appearance: none !important;
+    -moz-appearance: none !important;
+    appearance: none !important;
+    display: inline-block !important;
+    width: 28px !important;
+    height: 28px !important;
+    margin: 0 10px !important;
+    padding: 0 !important;
+    border: none !important;
+    outline: none !important;
+    cursor: pointer !important;
+    vertical-align: middle !important;
+    background-color: colors.$input-bg !important;
+    border-radius: 4px !important;
+    box-shadow:
+        0 0 0 1px rgba(0, 0, 0, 0.8),
+        inset 0 1px 3px rgba(0, 0, 0, 0.6) !important;
+    position: relative !important;
 
-  -webkit-appearance: none !important;
-  -moz-appearance: none !important;
-  appearance: none !important;
-
-  &:hover {
-    background-color: colors.$checkbox-hover !important;
-    box-shadow: 
-      0 0 0 1px rgba(255, 255, 255, 0.1),
-      inset 0 1px 3px rgba(0, 0, 0, 0.7) !important;
-  }
-
-  &:checked {
-    background-color: colors.$input-checked !important;
-
+    /* Remove Foundry's pseudo-elements */
+    &::before,
     &::after {
-      content: '✓' !important;
-      display: block !important;
-      position: absolute !important;
-      top: 50% !important;
-      left: 50% !important;
-      transform: translate(-50%, -50%) !important;
-      color: colors.$input-check !important;
-      font-size: 18px !important;
-      font-weight: bold !important;
-      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5) !important;
-      z-index: 101 !important;
+        display: none !important;
+        content: none !important;
+        visibility: hidden !important;
     }
-  }
+
+    /* Hover state */
+    &:hover {
+        background-color: colors.$input-hover !important;
+        box-shadow:
+            0 0 0 1px rgba(255, 255, 255, 0.1),
+            inset 0 1px 3px rgba(0, 0, 0, 0.7) !important;
+    }
+
+    /* Checked state */
+    &:checked {
+        background-color: #191813 !important;
+
+        &::before {
+            display: block !important;
+            content: "✓" !important;
+            visibility: visible !important;
+            position: absolute !important;
+            color: white !important;
+            font-size: 20px !important;
+            line-height: 28px !important;
+            width: 100% !important;
+            text-align: center !important;
+            top: 0 !important;
+            left: 0 !important;
+        }
+    }
 }
