Closes #35 : Status creator now handles default icon setting on the back end and has a border to indicate clickable area just in case of blank input.

--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -319,6 +319,11 @@
     margin-left: auto;
     align-self: flex-end;
     flex: 0 0 100px;
+
+    &--edit {
+      border: 1px solid colors.$input-image-edit-border;
+      border-radius: 10px;
+    }
   }
 
   &__hidden-input {
