--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -18,6 +18,7 @@
   --eventide-rp-system-character-glow: rgba(0, 123, 255, 0.75);
   --eventide-rp-system-character-background-color: linear-gradient(to bottom, rgba(68, 98, 131, 0.6), rgba(51, 72, 104, 0.5));
   --eventide-rp-system-secondary-image-background: rgba(0, 0, 0, 0.85);
+  --eventide-rp-system-image-edit-border: rgba(24, 24, 24, 0.65);
   --eventide-rp-system-hidden-bg: #f7e8ea;
   --eventide-rp-system-hidden-border: #e66a6e;
   --eventide-rp-system-effect-bg: rgba(136, 87, 53, 0.75);
@@ -116,6 +117,7 @@
   --eventide-rp-system-character-glow: rgba(0, 149, 255, 0.75);
   --eventide-rp-system-character-background-color: linear-gradient(to bottom, rgba(44, 63, 84, 0.6), rgba(33, 46, 66, 0.5));
   --eventide-rp-system-secondary-image-background: rgba(0, 0, 0, 0.85);
+  --eventide-rp-system-image-edit-border: rgba(153, 153, 153, 0.65);
   --eventide-rp-system-hidden-bg: #f7e8ea;
   --eventide-rp-system-hidden-border: #e66a6e;
   --eventide-rp-system-effect-bg: rgba(156, 107, 73, 0.75);
@@ -259,6 +261,7 @@ $input-placeholder: var(--eventide-rp-system-input-placeholder);
 $input-focus: var(--eventide-rp-system-input-focus);
 $input-checked: var(--eventide-rp-system-input-checked);
 $input-check: var(--eventide-rp-system-input-check);
+$input-image-edit-border: var(--eventide-rp-system-image-edit-border);
 
 // Checkbox colors
 $checkbox-bg: var(--eventide-rp-system-checkbox-bg);
