Slight change to remove unneeded ifThen

--- a/templates/macros/status-creator.hbs
+++ b/templates/macros/status-creator.hbs
@@ -11,7 +11,7 @@
     <label class="base-form__label" for="img">Image:</label>
     <img
       class="base-form__image base-form__image--edit"
-      src="{{storedData.status_img storedData.status_img}}"
+      src="{{storedData.status_img}}"
       data-edit="img"
       data-action='onEditImage'
       title="Status Image"
